[package]
name = "crypto_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.6"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
url = "2.4"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
futures = "0.3"
bytes = "1.0"
chrono = "0.4"
async-trait = "0.1"
base64 = "0.22"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8"] }
pkcs8 = { version = "0.10", features = ["pem", "encryption"] }
zeromq = "0.4.1"
zmq = "0.10.0"
uuid = "1.17.0"
sonic-rs = "0.5.1"
tokio-util = "0.7.15"
reqwest = "0.12.19"
prettytable = "0.10.0"
prost = "0.13"
flate2 = "1.0"

[build-dependencies]
prost-build = "0.13"
